--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="kupa">asdadasdasd</div>
+    <div class="kupa">Woda</div>
   </body>
 </html>
